# structural-moe-upcycling

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  setup.sh
configs/: smoke_test.yaml  test_inference.yaml  test_provision.yaml
experiment/primeintellect/: __init__.py  __main__.py  cli.py  client.py  launch.py  orchestrator.py  ssh_runner.py
scripts/: run_qwen15.sh
src/: train.py  upcycle.py
src/eval/: gsm8k.py
src/mixtral/: README.md  run.sh  train.py  upcycle.py
src/qwen15/: README.md  init_analysis.py  run.sh  train.py  upcycle.py
tests/: test_data.py  test_inference.py  test_train.py  test_upcycle.py
