[project]
name = "structural-moe-upcycling"
version = "0.1.0"
description = "Dense-to-MoE upcycling with structure-preserving residual initialization"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
train = [
    "torch",
    "transformers>=4.40",
    "unsloth",
    "trl",
    "datasets",
    "wandb",
    "scipy",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
